--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -176,6 +176,7 @@
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
+			"use strict";
 			(function(mui, doc) {
 				mui.init();
 				mui.plusReady(function() {
@@ -183,23 +184,59 @@
 					var sendVCodeBtn = doc.getElementById('send-verification-code');
 					sendVCodeBtn.addEventListener('tap', function(event) {
 						console.log("click sendVCodeBtn");
-						var params = {
-							"tokencheck": "",
-							"signcheck": Api.createSignInfo(),
-							"email": doc.getElementById('email').value
-						};
+						let params = [];
+						params[Api.Params.email] = doc.getElementById('email').value;
 						Repository.User.checkEmail(params, {
-							success: function(data) {
-								if(data.result.status == 'OK')
-									plus.UI.alert("验证码已发送至邮箱，请查收。")
-								else
-									plus.UI.alert("发送验证码失败，请重试。")
+							ok: function(data) {
+								mui.toast('验证码已发送至邮箱，请查收。', {
+									duration: 'long',
+									type: 'div'
+								})
+							},
+							ng: function(data) {
+								mui.toast('发送验证码失败，请重试。', {
+									duration: 'long',
+									type: 'div'
+								})
 							}
 						});
 					});
+
+					// register logic
 					var regBtn = doc.getElementById('reg');
 					regBtn.addEventListener('tap', function(event) {
 						console.log("click regBtn");
+						let params = [];
+						params[Api.Params.email] = doc.getElementById('email').value.trim();
+						params[Api.Params.username] = doc.getElementById('username').value.trim();
+						params[Api.Params.password] = hex_md5(doc.getElementById('password').value.trim());
+						params[Api.Params.addressId] = doc.getElementById('city').getAttribute('data-val');
+						params[Api.Params.vCode] = doc.getElementById('verificationCode').value.trim();
+						params[Api.Params.rCode] = doc.getElementById('introduction-code').value.trim();
+						Repository.User.register(params, {
+							ok: function(data) {
+								Log.i("注册成功")
+							},
+							ng: function(data) {
+								Log.i("注册失败")
+							}
+						});
+					});
+
+					// address logic
+					let cityPickerBtn = doc.getElementById('showCityPicker');
+					let cityPicker = new mui.PopPicker({
+						layer: 2
+					});
+					cityPicker.setData(cityData);
+					cityPickerBtn.addEventListener('tap', function(event) {
+						Log.i("click cityPicker");
+						cityPicker.show(function(items) {
+							Log.i(items[1]);
+							let cityElement = doc.getElementById('city');
+							cityElement.value = items[0].text + " " + items[1].text;
+							cityElement.setAttribute('data-val', items[1].value);
+						});
 					});
 				});
 			})(mui, document);
