--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -43,7 +43,7 @@
 			</div>
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<p class="kankan_productname">Product Name Product Name Product Name Product Name Product Name </p>
+					<p class="kankan_productname"></p>
 					<div class="mui-pull-left kankan_zanbox">
 						<div id="zanhou" style="display:none;" onclick="dianzan(this.id)" class="kankan_goods">
 							<span class="mui-icon-extra mui-icon-extra-heart-filled ka_heartred"></span>
@@ -68,7 +68,7 @@
 					<div class="mui-pull-left lang" data-locale="det_spdescription"></div>
 				</li>
 				<li class="mui-table-view-cell">
-					<div class="kankan_det_information">Content Content Contents Content Contents Content Contents Content</div>
+					<div class="kankan_det_information"></div>
 				</li>
 			</ul>
 			<!--share-->
@@ -166,26 +166,17 @@
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
 		<!--<script src="../../../js/language.js"></script>-->
-		<script src="../../../js/knockout-3.4.2.js"></script>
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
 				swipeBack: true //启用右滑关闭功能
 			});
-			//send param
-//			var ws = null;
-//			mui.plusReady(function() {
-//				ws = plus.webview.create("detail.html", "detail");
-//			});
-//			mui('.detail').on('tap', 'a', function(e) {
-//				var targetId = this.getAttribute("id");
-//				ws.evalJS('send(' + targetId + ')');
-//				ws.show();
-//			});
+			
 //*********************share start
 		var shares = {};
 		mui.plusReady(function() {
+			TextMessage.language = plus.os.language;
 			plus.share.getServices(function(s) {
 				if (s && s.length > 0) {
 					for (var i = 0; i < s.length; i++) {
@@ -282,25 +273,19 @@
 		//share end***********/
 			$(function(){
 				var params = {
-					"tokencheck": "",
-					"signcheck":Api.createSignInfo(),
 					//"nickname": auth.userInfo.nickname,
 					//"headimgurl": auth.userInfo.headimgurl,
+					//"tokencheck":"",
+					//"signcheck":"1492595038170_6076769b79e6c90e57f2b1f95b2fc605c3e9231e31a9f215773ff2263f4af43b_2bfd58a24210902eb67948f568aaa9ecf314e34a35ddb4ea7fd553908b0e0f4e",
 					"commodity_id": "100001"
 				};
-				Repository.User.commoditydetail(params, {
-					success: function(data) {
-						//console.dir(data.result.data.commodity_imgs);
-						if(data.result.status == 'OK') {
-							console.log("成功");
+				Repository.Commodity.commodityDetail(params, {
+					ok: function(data) {
+							Log.d("success");
 							messageshow(data);
-							
-						} else {
-							console.log("失败");
-						}
 					},
-					error: function(xhr, type, errorThrown) {
-						mui.alert('发生未知错误，请稍后重试。', 'Error', function() {});
+					ng: function(data) {
+						Log.d('error');
 					}
 				});
 			});
@@ -311,7 +296,7 @@
 //			}
 			//message show
 			function messageshow(results) {
-				var commodity = results.result.data;
+				var commodity = results.data;
 				var comdbasic = commodity.commodity_basic;
 				//var comdinfo=JSON.stringify(comdbasic[0]);
 				//console.log(comdinfo);
@@ -487,24 +472,46 @@
 				self.hide();
 			}
 			//goods
-			function dianzan(aid) {
-				if(aid == "zanqian") {
-					document.getElementById(aid).style.display = "none";
-					document.getElementById("zanhou").style.display = "block";
-					var goodbefor = document.getElementById("zanshu").innerHTML * 1;
-					var gooafter = goodbefor + 1 * 1;
-					document.getElementById("zanshu").innerHTML = gooafter;
-					//mui("#zanshu").Style("color: #000000;margin-right: 0.1em;");
-					//alert(gooafter);
-				} else {
-					//alert(aid);
-					document.getElementById(aid).style.display = "none";
-					document.getElementById("zanqian").style.display = "block";
-					var goodbefor = document.getElementById("zanshu").innerHTML * 1;
-					var gooafter = goodbefor - 1 * 1;
-					document.getElementById("zanshu").innerHTML = gooafter;
-					//alert(gooafter);
+			function dianzan(bid) {
+				function praise(aid){
+					if(aid == "zanqian") {
+						document.getElementById(aid).style.display = "none";
+						document.getElementById("zanhou").style.display = "block";
+						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
+						var gooafter = goodbefor + 1 * 1;
+						document.getElementById("zanshu").innerHTML = gooafter;
+						//mui("#zanshu").Style("color: #000000;margin-right: 0.1em;");
+						//alert(gooafter);
+					} else {
+						//alert(aid);
+						document.getElementById(aid).style.display = "none";
+						document.getElementById("zanqian").style.display = "block";
+						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
+						var gooafter = goodbefor - 1 * 1;
+						document.getElementById("zanshu").innerHTML = gooafter;
+						//alert(gooafter);
+					}
 				}
+				
+				//ajax post 
+				var params1 = {
+					//"tokencheck":"+GGzMiM28W8dy+XxzQAl4x3L5fHNACXjh/PqKa19BIs=70760a3f4cbcc375c67df5c75919adbe09b8aca4fc25fa6d7068bcd66169a108",
+					//"signcheck":"1492595038170_6076769b79e6c90e57f2b1f95b2fc605c3e9231e31a9f215773ff2263f4af43b_2bfd58a24210902eb67948f568aaa9ecf314e34a35ddb4ea7fd553908b0e0f4e",
+					"commid":"10"
+				};
+				Repository.Commodity.praise(params1, {
+					ok: function(data) {
+							Log.d("success");
+							praise(bid);
+					},
+					ng: function(data) {
+						Log.d('error');
+						console.log(data);
+						if(data=="1000"){
+							alert(TextMessage.test);
+						}
+					}
+				});
 			}
 			mui(".productlist").on("tap", "a", function() {
 				mui.openWindow({
