主页面逻辑改修

--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -8,6 +8,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css" />
+		<link rel="stylesheet" href="../../css/icons-extra.css">
+		<link rel="stylesheet" href="../../css/home.css" />
 		<style>
 			html,
 			body {
@@ -101,435 +103,9 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
-						<a class="mui-control-item mui-active" href="#item1mobile">
-							推荐
-						</a>
-						<a class="mui-control-item" href="#item2mobile">
-							热点
-						</a>
-						<a class="mui-control-item" href="#item3mobile">
-							北京
-						</a>
-						<a class="mui-control-item" href="#item4mobile">
-							社会
-						</a>
-						<a class="mui-control-item" href="#item5mobile">
-							娱乐
-						</a>
-						<a class="mui-control-item" href="#item6mobile">
-							科技
-						</a>
 					</div>
 				</div>
 				<div class="mui-slider-group">
-					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item2mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item3mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item4mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item5mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item6mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第6个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -550,30 +126,54 @@
 					indicators: true, //是否显示滚动条
 					deceleration: deceleration
 				});
+
 				mui.ready(function() {
-					//循环初始化所有下拉刷新，上拉加载。
-					mui.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
-						mui(pullRefreshEl).pullToRefresh({
-							down: {
-								callback: function() {
-									var self = this;
-									setTimeout(function() {
-										createFragment(self);
-									}, 1000);
+
+					(function() {
+						var params = {};
+						Repository.Commodity.category(params, {
+							ok: function(result) {
+								for(var i = 0; i < result.data.length; i++) {
+									var html = new Util.StringBuilder();
+									html.appendFormat('<a class="{0}" href="{1}" data-catalogId="{2}">', i == 0 ? "mui-control-item mui-active" : "mui-control-item", "#item" + (i + 1) + "mobile", result.data[i].catalog_id)
+										.append(result.data[i].catalog_detail)
+										.append('</a>');
+									$('#sliderSegmentedControl .mui-scroll').append(html.toString());
+									html.clear();
+									html.appendFormat('<div id="{0}" class="{1}">', "item" + (i + 1) + "mobile", i == 0 ? "mui-slider-item mui-control-content mui-active" : "mui-slider-item mui-control-content")
+										.append('<div class="mui-scroll-wrapper">')
+										.append('<div class="mui-scroll">')
+										.append('<ul class="mui-table-view mui-grid-view"></ul>')
+										.append('</div></div></div>');
+									$('.mui-slider-group').append(html.toString());
 								}
+								Log.i("create catalog finish...");
 							},
-							up: {
-								callback: function() {
-									var self = this;
-									setTimeout(function() {
-										var ul = self.element.querySelector('.mui-table-view');
-										ul.appendChild(createFragment(ul, index, 5));
-										self.endPullUpToRefresh();
-									}, 1000);
-								}
+							ng: function(data) {
+								Log.e("category ng");
 							}
+						}).then(function() {
+							//循环初始化所有下拉刷新，上拉加载。
+							Log.i(document.querySelectorAll('.mui-slider-group .mui-scroll').length);
+							mui.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
+								mui(pullRefreshEl).pullToRefresh({
+									down: {
+										callback: function() {
+											var self = this;
+											createFragment(self, true);
+										}
+									},
+									up: {
+										callback: function() {
+											var self = this;
+											createFragment(self, false);
+										}
+									}
+								});
+							});
 						});
-					});
+					})();
+
 					//ul, index, count, reverse
 					var createFragment = function(self, isDown) {
 						// get commodity list data
@@ -597,10 +197,11 @@
 							var li;
 							for(var i = 0; i < commodityArray.length; i++) {
 								li = document.createElement('li');
-								li.className = 'mui-table-view-cell';
+								li.className = 'mui-table-view-cell mui-media mui-col-xs-6';
 								var html = new Util.StringBuilder();
 								html.append('<a>')
-									.appendFormat('<img class="mui-media-object ka_imgoption" src="{0}">', commodityArray[i].imgs)
+									//.appendFormat('<img class="mui-media-object ka_imgoption" src="{0}">', commodityArray[i].imgs)
+									.appendFormat('<img class="mui-media-object ka_imgoption" src="{0}">', "../../images/muwu.jpg")
 									.appendFormat('<div class="mui-media-body">{0}</div>', commodityArray[i].commName)
 									.append('</a>')
 									.appendFormat('<div class="kankan_area">{0}</div>', commodityArray[i].classes)
@@ -614,27 +215,15 @@
 								li.innerHTML = html.toString();
 								fragment.appendChild(li);
 							}
-							if(isDown)
+							if(isDown) {
 								ul.insertBefore(fragment, ul.firstChild);
-							self.endPullDownToRefresh();
-						});
-					};
-
-					/**
-					var getCateory = function() {
-						Log.i("getCateory")
-						var params = {};
-						Repository.Commodity.catalog(params, {
-							ok:function(data){
-								Log.i(data);
-							},
-							ng:function(data){
-								Log.e(data);
+								self.endPullDownToRefresh();
+							} else {
+								ul.appendChild(fragment);
+								self.endPullUpToRefresh();
 							}
 						});
 					};
-					getCateory();
-					**/
 				});
 			})(mui);
 		</script>
