--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -98,7 +98,6 @@
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/common.js"></script>
 		<script>
-			"use strict";
 			(function($, doc) {
 				$.init({
 					statusBarBackground: '#FFFFFF'
@@ -155,7 +154,7 @@
 									var name = auth.userInfo.nickname || auth.userInfo.name;
 									console.log("auth userinfo is ");
 									console.dir(auth.userInfo);
-									let params = [];
+									var params = {};
 									params[Api.Params.loginType] = LOGIN_TYPE.OAUTH;
 									params[Api.Params.nickName] = auth.userInfo.nickname;
 									params[Api.Params.openId] = auth.userinfo.openid;
@@ -192,7 +191,7 @@
 					var loginBtn = doc.getElementById('login');
 					loginBtn.addEventListener('tap', function(event) {
 						console.log("click login btn");
-						let params = [];
+						var params = {};
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
 						params[Api.Params.password] = hex_md5(doc.getElementById('password').value.trim());
