--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -176,7 +176,6 @@
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			"use strict";
 			(function(mui, doc) {
 				mui.init();
 				mui.plusReady(function() {
@@ -184,7 +183,7 @@
 					var sendVCodeBtn = doc.getElementById('send-verification-code');
 					sendVCodeBtn.addEventListener('tap', function(event) {
 						console.log("click sendVCodeBtn");
-						let params = [];
+						var params = {};
 						params[Api.Params.email] = doc.getElementById('email').value;
 						Repository.User.checkEmail(params, {
 							ok: function(data) {
@@ -206,7 +205,7 @@
 					var regBtn = doc.getElementById('reg');
 					regBtn.addEventListener('tap', function(event) {
 						console.log("click regBtn");
-						let params = [];
+						var params = {};
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
 						params[Api.Params.username] = doc.getElementById('username').value.trim();
 						params[Api.Params.password] = hex_md5(doc.getElementById('password').value.trim());
@@ -233,7 +232,7 @@
 						Log.i("click cityPicker");
 						cityPicker.show(function(items) {
 							Log.i(items[1]);
-							let cityElement = doc.getElementById('city');
+							var cityElement = doc.getElementById('city');
 							cityElement.value = items[0].text + " " + items[1].text;
 							cityElement.setAttribute('data-val', items[1].value);
 						});
