--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Hello MUI</title>
+		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -21,18 +21,24 @@
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="home.html">
 				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">Home</span>
+				<span class="mui-tab-label lang" data-locale="tab_1"></span>
 			</a>
 			<a class="mui-tab-item" href="products/product_login.html">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label">Merchandise landing</span>
+				<span class="mui-icon mui-icon-camera"></span>
+				<span class="mui-tab-label lang" data-locale="tab_2"></span>
+			</a>
+			<a class="mui-tab-item" href="products/product_want_to_buy.html">
+				<span class="mui-icon mui-icon-compose"></span>
+				<span class="mui-tab-label lang" data-locale="tab_3"></span>
 			</a>
 			<a class="mui-tab-item" href="products/request.html">
 				<span class="mui-icon mui-icon-eye"></span>
-				<span class="mui-tab-label">Commodity status</span>
+				<span class="mui-tab-label lang" data-locale="tab_4"></span>
 			</a>
 		</nav>
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			if(!mui.os.android) {
 				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
@@ -48,7 +54,7 @@
 				//beforeback: back
 			});
 
-			var subpages = ['home.html', 'products/product_login.html', 'products/request.html'];
+			var subpages = ['home.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'products/request.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
